CSS added to client and admin panel. Fixed layout overflow

--- a/style.css
+++ b/style.css
@@ -7,6 +7,9 @@
 }
 
 body{
+    width: 100vw;
+    height: 100vh;
+    overflow: hidden;
     font-family: sans-serif;
     background: url('./img/Slide2.PNG');
     background-position: center;
@@ -29,17 +32,26 @@ body{
     background: #00399b; 
 }
 
+/* ================ NAVBAR ============== */
+.navbar{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    padding: 10px;
+}
+
 /* ============ CONTAINERS ============== */
 main{
-    width: 100vw;
-    height: 99vh;
+    width: 100%;
+    height: 100%;
     overflow-x: hidden;
     position: relative;
 }
 section{
     width: 100%;
-    height: 90%;
-    margin: 40px 0;
+    margin: 40px 0 0;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -84,6 +96,10 @@ section{
     width: 500px;
     margin: auto;    
 }
+.cont-lg{
+    width: 968px;
+    margin: auto;
+}
 .cont-special{
     flex: 1;
     min-height: 500px;
@@ -101,15 +117,7 @@ section{
     padding: 30px 30px 30px 100px;
 }
 
-/* ================ NAVBAR ============== */
-.navbar{
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-    padding: 10px;
-}
+
 
 /* ==================== CUSTOM TEXTS ================ */
 h1{
@@ -255,11 +263,15 @@ form{
     padding: 20px;
 }
 
-input{
+input,
+textarea{
     border: 3px solid #e40057;
     font-size: 18px;
     border-radius: 5px;
     padding: 5px;
+}
+textarea{
+    width: 500px;
 }
 label{
     font-size: 18px;
